--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2 class="titulo">Selecione seu Pateta</h2>
 
             <ul class="lista-de-patetas">
-                <li class="pateta selecionado" id="andre" data-name="André" data-description="Come pra caramba, tem uns parafuso a menos e sabe tocar violão. Habilidade especial: faz programa.">
+                <li class="pateta" id="andre" data-name="André" data-description="Come pra caramba, tem uns parafuso a menos e sabe tocar violão. Habilidade especial: faz programa.">
                     <img 
                         src="./src/imagens/card-andre.jpg" 
                         alt="André"
@@ -60,7 +60,9 @@
             <img class="pateta-grande" src="./src/imagens/card-andre.png" alt="Pateta Selecionado">
             <div class="informacoes-pateta">
                 <h3 class="nome-pateta" id="nome-pateta">André</h3>
-                <p class="descricao-pateta" id="descricao-pateta"></p>
+                <p class="descricao-pateta" id="descricao-pateta">
+                    Come pra caramba, tem uns parafuso a menos e sabe tocar violão. Habilidade especial: faz programa.
+                </p>
             </div>
         </section>
         <script src="./src/js/index.js"></script>
