corrijindo erro 'selecionado'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2 class="titulo">Selecione seu Pateta</h2>
 
             <ul class="lista-de-patetas">
-                <li class="pateta" id="andre" data-name="André" data-description="Come pra caramba, tem uns parafuso a menos e sabe tocar violão. Habilidade especial: faz programa.">
+                <li class="pateta selecionado" id="andre" data-name="André" data-description="Come pra caramba, tem uns parafuso a menos e sabe tocar violão. Habilidade especial: faz programa.">
                     <img 
                         src="./src/imagens/card-andre.jpg" 
                         alt="André"
